@@ -14,7 +14,7 @@ rcsb.utils.multiproc >= 0.17
 rcsb.utils.chemref >= 0.70
 scandir; python_version < "3.0"
 configparser; python_version < "3.0"
-rcsb.utils.dictionary >= 0.29
+rcsb.utils.dictionary >= 0.32
 rcsb.utils.repository >= 0.12
 #
 SQLAlchemy; sys_platform == 'linux'
