@@ -303,3 +303,4 @@
  28-Apr-2021  V1.670 Add content type for mmCIF format validation data
   4-May-2021  V1.671 Remove deprecated schema attribute rcsb_nested_indexing_context.context_attributes.search_paths
  19-May-2021  V1.673 Update dependencies in rcsb.utils.dictionary
+ 27-May-2021  V1.674 Update dependencies to rcsb.utils.dictionary
